--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_days.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_days.xml
@@ -7,14 +7,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Days">
+    tools:context=".activities.DaysActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titleMonth"
-        android:visibility="invisible"
         android:textSize="22sp"
+        android:visibility="invisible"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_marginTop="5dp"
@@ -23,12 +23,22 @@
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:id="@+id/backButtonDays"
+        android:src="@drawable/backbutton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickBack"/>
+
+    <ImageView
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:id="@+id/settingsButtonDays"
         android:src="@drawable/settingsicon"
-        android:layout_marginBottom="20dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:id="@+id/settingsButtonDays"
+        android:layout_marginBottom="20dp"
         android:onClick="onClickSettings"/>
 
     <ListView
@@ -38,35 +48,34 @@
         android:layout_below="@id/settingsButtonDays"/>
 
     <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:id="@+id/addButtonDays"
         android:src="@drawable/plusbutton"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:onClick="onClickAddDay"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/okButtonMonth"
-        android:text="ok"
+        android:text="@string/ok"
+        android:visibility="gone"
         android:layout_toLeftOf="@id/settingsButtonDays"
         android:layout_toStartOf="@id/settingsButtonDays"
         android:layout_marginRight="15dp"
         android:layout_marginEnd="15dp"
-        android:visibility="gone"
         android:onClick="onClickOkDays"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTitleMonth"
-        android:hint="vul de maand in"
-        android:layout_toLeftOf="@id/okButtonMonth"
-        android:layout_toStartOf="@id/okButtonMonth"
+        android:hint="@string/hintTitleMonth"
+        android:visibility="gone"
         android:layout_alignBottom="@id/okButtonMonth"
-        android:visibility="gone"/>
+        android:layout_toLeftOf="@id/okButtonMonth"
+        android:layout_toStartOf="@id/okButtonMonth"/>
 
 </RelativeLayout>
