--- a/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_districts.xml
+++ b/PostNLWerktijden&Salaris/app/src/main/res/layout/activity_districts.xml
@@ -7,17 +7,27 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Districts">
+    tools:context=".activities.DistrictsActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wijken"
-        android:textSize="22sp"
         android:id="@+id/districtsTitle"
+        android:text="@string/districts"
+        android:textSize="22sp"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_marginTop="5dp"/>
+
+    <ImageView
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:id="@+id/backButtonDistricts"
+        android:src="@drawable/backbutton"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClickBack"/>
 
     <ListView
         android:layout_width="wrap_content"
@@ -26,12 +36,11 @@
         android:layout_below="@id/districtsTitle"/>
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/plusbutton"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:onClick="onClickAddDistrict"/>
 
 </RelativeLayout>
